<resources>
    <string name="app_name">Mic2Shell</string>

    <string name="share">Share</string>
    <string name="ctrlc">SIGHUP</string>
    <string name="microphone">Microphone</string>
    <string name="input_address">Address</string>
    <string name="input_port">Port</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="button_pubkey">Share RSA public key</string>
    <string name="button_start">Let\'s go</string>
    <string name="default_font" translatable="false">monospace</string>
    <string name="command_hint">Shell command</string>

    <string name="error_title">Connection failure</string>
    <string name="error_disconnect">Disconnect</string>
    <string name="error_not_connected">Session is no longer connected.</string>

    <string name="snackbar_intent_failed">Failed to share log</string>
    <string name="dismiss">Dismiss</string>
</resources>