<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/microphone"
            android:checkable="true"
            android:checked="false"
            android:icon="@drawable/baseline_mic_none_24"
            android:title="@string/microphone"
            app:showAsAction="ifRoom" />
        <item
                android:id="@+id/ctrlc"
                android:title="@string/ctrlc"
                android:text="@string/ctrlc"
                app:showAsAction="ifRoom" />
        <item
            android:id="@+id/alias"
            android:title="Alias" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/share" />
</menu>